[project]
name = "queryclear-agent-runtime"
version = "0.0.0"
description = "QueryClear agent runtime boundary and token metering foundation."
requires-python = ">=3.11,<3.13"
dependencies = []

[project.optional-dependencies]
# OpenAI is the M0 model path. It is lazily imported by OpenAIProvider so the
# core package (interfaces + metering) stays importable without it.
openai = ["openai>=1.40"]
# httpx backs HttpPageFetcher (also lazily imported) for the M0 crawl step.
crawl = ["httpx>=0.27"]
# FastAPI adapter (app.py) — the TS<->Python boundary. Not imported by tests.
api = ["fastapi>=0.110", "uvicorn>=0.29", "python-dotenv>=1.0"]
# SQLAlchemy persistence (db.py). psycopg drives Postgres; SQLite needs no driver.
db = ["sqlalchemy>=2.0", "psycopg[binary]>=3.1"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
